fix wrong spacing between db cards

--- a/src/static/scss/components/_tables.scss
+++ b/src/static/scss/components/_tables.scss
@@ -5,7 +5,6 @@
   @extend .table;
   @extend .table-borderless;
   @extend .fs-7;
-  @extend .mb-3;
 
   &--fixed {
     table-layout: fixed;
