--- a/src/static/scss/layout/_dashboard.scss
+++ b/src/static/scss/layout/_dashboard.scss
@@ -289,6 +289,7 @@
   @extend .bg-white;
   @extend .rounded;
   @extend .shadow-sm;
+  @extend .mb-3;
 
   &--budget,
   &--costs {
